--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "antd": "^0.11.3",
+    "bluebird": "^3.2.1",
     "console-polyfill": "^0.2.2",
     "css-loader": "^0.23.1",
     "ejs": "^2.3.4",
