--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "marked": "^0.3.5",
     "md5": "^2.0.0",
     "object-assign": "^4.0.1",
+    "pinyin": "^2.7.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "style-loader": "^0.13.0",
