--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "antd": "^0.11.3",
     "bluebird": "^3.2.1",
     "console-polyfill": "^0.2.2",
+    "crypto-js": "^3.1.6",
     "css-loader": "^0.23.1",
     "ejs": "^2.3.4",
     "es3ify-loader": "^0.1.0",
