--- a/mock_server/data/createAppointment.json
+++ b/mock_server/data/createAppointment.json
@@ -45,6 +45,16 @@
           "isFace": 2,
           "type": 4
         }
+  ],
+  "areaList":[
+      {
+         "code":330100,
+         "name":"杭州市"
+      },
+      {
+        "code":330200,
+         "name":"宁波市"
+      }
   ]
 
 }
